--- a/model_sergio.ipynb
+++ b/model_sergio.ipynb
@@ -938,6 +938,129 @@
    "source": [
     "lang_predict(\"Nein\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pykalman import KalmanFilter\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the initial state and transition matrix\n",
+    "x_init = np.array([0.25, 0.25, 0.25, 0.25])\n",
+    "transition_matrix = np.eye(4)\n",
+    "\n",
+    "# Define the measurement matrix and measurement noise\n",
+    "# measurement_matrix = [[1, 0, 0, 0],\n",
+    "#                       [0, 1, 0, 0],\n",
+    "#                       [0, 0, 1, 0],\n",
+    "#                       [0, 0, 0, 1]]\n",
+    "measurement_matrix = np.eye(4)\n",
+    "measurement_noise = np.eye(4)*0.01\n",
+    "#measurement_noise = np.diag([0.1, 0.1, 0.1, 0.1])\n",
+    "\n",
+    "# Define the process noise\n",
+    "process_noise = np.eye(4)*0.01\n",
+    "\n",
+    "# Create the Kalman filter\n",
+    "kf = KalmanFilter(transition_matrices=transition_matrix,\n",
+    "                  observation_matrices=measurement_matrix,\n",
+    "                  initial_state_mean=x_init,\n",
+    "                  observation_covariance=measurement_noise,\n",
+    "                  transition_covariance=process_noise\n",
+    "                  )\n",
+    "\n",
+    "# Generate some fake measurements\n",
+    "measurements = np.array([1, 0, 0, 0])\n",
+    "\n",
+    "# Run the Kalman filter\n",
+    "(filtered_state_means, filtered_state_covariances) = kf.filter(measurements)\n",
+    "print(filtered_state_means)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measurements = np.array([1, 1, 1, 1])\n",
+    "\n",
+    "# Run the Kalman filter\n",
+    "(filtered_state_means, filtered_state_covariances) = kf.filter(measurements)\n",
+    "print(filtered_state_means)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class KalmanFilter:\n",
+    "    def __init__(self, initial_state, initial_covariance, transition_matrix, observation_matrix, process_noise_covariance, observation_noise_covariance):\n",
+    "        self.state = initial_state\n",
+    "        self.covariance = initial_covariance\n",
+    "        self.transition_matrix = transition_matrix\n",
+    "        self.observation_matrix = observation_matrix\n",
+    "        self.process_noise_covariance = process_noise_covariance\n",
+    "        self.observation_noise_covariance = observation_noise_covariance\n",
+    "\n",
+    "    def predict(self):\n",
+    "        self.state = np.dot(self.transition_matrix, self.state)\n",
+    "        self.covariance = np.dot(np.dot(self.transition_matrix, self.covariance), self.transition_matrix.T) + self.process_noise_covariance\n",
+    "\n",
+    "    def update(self, observation):\n",
+    "        innovation = observation - np.dot(self.observation_matrix, self.state)\n",
+    "        innovation_covariance = np.dot(np.dot(self.observation_matrix, self.covariance), self.observation_matrix.T) + self.observation_noise_covariance\n",
+    "        kalman_gain = np.dot(np.dot(self.covariance, self.observation_matrix.T), np.linalg.inv(innovation_covariance))\n",
+    "        self.state = self.state + np.dot(kalman_gain, innovation)\n",
+    "        self.covariance = np.dot((np.eye(self.state.shape[0]) - np.dot(kalman_gain, self.observation_matrix)), self.covariance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initial state estimate (probabilities for each language)\n",
+    "initial_state = np.array([0.25, 0.25, 0.25, 0.25])  # Assuming equal probability for each language\n",
+    "# Initial covariance matrix\n",
+    "initial_covariance = np.eye(4) * 0.01  # Assuming small uncertainty\n",
+    "# Transition matrix (identity matrix as we don't have a dynamic model for language probabilities)\n",
+    "transition_matrix = np.eye(4)\n",
+    "# Observation matrix (identity matrix as we directly observe the language)\n",
+    "observation_matrix = np.eye(4)\n",
+    "# Process noise covariance (assuming small process noise)\n",
+    "process_noise_covariance = np.eye(4) * 0.001\n",
+    "# Observation noise covariance (assuming small observation noise)\n",
+    "observation_noise_covariance = np.eye(4) * 0.001\n",
+    "\n",
+    "# Initialize Kalman filter\n",
+    "kalman_filter = KalmanFilter(initial_state, initial_covariance, transition_matrix, observation_matrix, process_noise_covariance, observation_noise_covariance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example observation for English language\n",
+    "observation = np.array([0, 1, 0, 0])  # English\n",
+    "\n",
+    "# Update the Kalman filter with the observation\n",
+    "kalman_filter.update(observation)\n",
+    "\n",
+    "# After update, you can get the current state (language probabilities)\n",
+    "current_language_probabilities = kalman_filter.state\n",
+    "\n",
+    "# Print the current language probabilities\n",
+    "print(\"Current Language Probabilities:\", current_language_probabilities)\n"
+   ]
   }
  ],
  "metadata": {
